Update 04 - TS.md

--- a/01 - Frontend/04 - TS.md
+++ b/01 - Frontend/04 - TS.md
@@ -115,6 +115,4 @@ Yes, I frequently use advanced TypeScript features to write cleaner, more robust
 - **Utility Types:** I use these constantly. For example, when defining a DTO (Data Transfer Object) for an API endpoint that creates a user, I might use `Omit<User, 'id' | 'createdAt'>` to derive the creation DTO from the main `User` type. This prevents code duplication and ensures that if the `User` type changes, our DTOs are updated accordingly. Similarly, I use `Partial<T>` for update endpoints where any subset of fields can be modified.
 - **Generics:** I rely on generics heavily to create reusable and type-safe functions and components. For instance, I've built generic API fetching functions that can be used across the application. You can pass the expected response type as a generic parameter, like `fetchData<User[]>('/api/users')`, ensuring the returned data is correctly typed without needing to write a separate function for every endpoint. This was central to building reusable UI libraries in a previous role65.
 - **Conditional Types:** I've used conditional types to create more dynamic and flexible type definitions. For instance, you can create a type that resolves to one shape or another based on a property of the input type. This is useful for creating highly dynamic functions where the return type depends on the specific arguments passed in.
-- **`zod` for Runtime Validation:** While not a TypeScript feature itself, I use libraries like `zod` to bridge the gap between TypeScript's compile-time types and runtime validation. I define a
-
-    `zod` schema to validate incoming API request bodies and can then use `zod.infer<typeof mySchema>` to automatically generate a static TypeScript type from that schema66. This ensures that my data is valid at runtime and correctly typed at compile time, all from a single source of truth.
+- **`zod` for Runtime Validation:** While not a TypeScript feature itself, I use libraries like `zod` to bridge the gap between TypeScript's compile-time types and runtime validation. I define a `zod` schema to validate incoming API request bodies and can then use `zod.infer<typeof mySchema>` to automatically generate a static TypeScript type from that schema66. This ensures that my data is valid at runtime and correctly typed at compile time, all from a single source of truth.
